--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "framer-motion": "^4.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -21,7 +22,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-app-rewired start",
